[gd_scene load_steps=13 format=3 uid="uid://dtl0wbjoonkjt"]

[ext_resource type="Script" path="res://player/player.gd" id="1_5y1l6"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_km41j"]
load_path = "res://.godot/imported/the_lifeguard_main.png-0da36bc14fd32b74069c28d1cc2a4870.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdv3d"]
size = Vector2(8, 12)

[sub_resource type="Animation" id="Animation_y5i4d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4oij5"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tfr8c"]
resource_name = "idle_water"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_4jg2e"]
resource_name = "run_back"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_nbvd7"]
resource_name = "run_front"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_bod21"]
resource_name = "swim"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c16ki"]
_data = {
"RESET": SubResource("Animation_y5i4d"),
"idle": SubResource("Animation_4oij5"),
"idle_water": SubResource("Animation_tfr8c"),
"run_back": SubResource("Animation_4jg2e"),
"run_front": SubResource("Animation_nbvd7"),
"swim": SubResource("Animation_bod21")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e87li"]
size = Vector2(8, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0spw"]
size = Vector2(12, 12)

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5y1l6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_km41j")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_vdv3d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c16ki")
}

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_e87li")

[node name="rescure" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rescure"]
shape = SubResource("RectangleShape2D_x0spw")

[connection signal="area_entered" from="detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="detection" to="." method="_on_detection_area_exited"]
[connection signal="area_entered" from="rescure" to="." method="_on_rescure_area_entered"]
